# nn_magnetics

./: .gitignore  README.md  baseline.py  create_data.py  dataset.py  generate.py  main.py  model.py  optimize.py  plotting.py  pyproject.toml  requirements.txt  scalar_potential.py  setup.py  speed.py  stats.py  train.py  utils.py
data/: 0.npz  1.npz  2.npz  4.npz  7.npz
data/anisotropic_chi/eval/: data_2.npz  data_coarse_2.npz
data/anisotropic_chi/test_anisotropic/: data_102.npz  data_104.npz  data_106.npz  data_108.npz  data_109.npz  data_112.npz  data_114.npz  data_115.npz  data_116.npz  data_119.npz  data_12.npz  data_120.npz  data_122.npz  data_123.npz  data_124.npz  data_126.npz  data_128.npz  data_129.npz  data_132.npz  data_133.npz  data_135.npz  data_136.npz  data_137.npz  data_14.npz  data_141.npz  data_149.npz  data_151.npz  data_153.npz  data_154.npz  data_155.npz  data_157.npz  data_159.npz  data_160.npz  data_161.npz  data_162.npz  data_163.npz  data_165.npz  data_166.npz  data_168.npz  data_170.npz  (+44 more)
data/anisotropic_chi/test_fast/: data_1.npz  data_2.npz  data_8.npz
data/anisotropic_chi/test_isotropic/: data_100.npz  data_101.npz  data_102.npz  data_103.npz  data_104.npz  data_105.npz  data_106.npz  data_107.npz  data_108.npz  data_109.npz  data_11.npz  data_110.npz  data_111.npz  data_112.npz  data_113.npz  data_114.npz  data_115.npz  data_116.npz  data_117.npz  data_118.npz  data_119.npz  data_120.npz  data_121.npz  data_122.npz  data_123.npz  data_124.npz  data_125.npz  data_126.npz  data_127.npz  data_128.npz  data_129.npz  data_130.npz  data_131.npz  data_132.npz  data_134.npz  data_135.npz  (+91 more)
data/old/: 3.npz  5.npz  6.npz  8.npz  9.npz
data/paper/: plotdata_NN.npz  plotdata_analytical.npz
fits/: optimised.json
metrics/: __init__.py  amplitude.py  angle.py
notebooks/: generate.ipynb  loss.pgf  mucking_around.ipynb  net.ipynb  rotation.ipynb  test.ipynb  training_stats.json  val_stats.json  wandb.ipynb
old/: create_data_anisotropicchi.py  neural_network_various_field_extended.py  neural_network_various_test.py
results/: data_2024-10-17 15:56:57.049141.json  data_2024-10-17 16:05:21.228722.json
scans/: Hippie_Side_scan.hdf5  Hippie_Under_scan.hdf5
src/: __init__.py  create_data.py  dataset.py  model.py  plotting.py  run.py  train.py
src/nn_magnetics/: __init__.py  cmaps.py  corrections.py  create_data.py  dataset.py  model.py  plotting.py  run.py  train.py  validate.py
src/utils/: __init__.py  device.py  metrics.py  scalar_potential.py
utils/: __init__.py  demag.py
(+428 files in other folders)
