[project]
name = "nn-magnetics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack Smith", email = "jacksmith2000@me.com" }
]
requires-python = ">=3.12"
dependencies = [
    "magpylib-material-response>=0.3.0",
    "numpy>=2.1.3",
    "magpylib>=5.1.0",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
    "wandb>=0.18.6",
    "nbformat>=5.10.4",
    "scipy>=1.14.1",
    "scienceplots>=2.1.1",
    "wakepy>=0.10.1",
    "tool>=0.8.0",
    "h5py>=3.12.1",
    "webcolors==24.11.1",
    "jaxtyping>=0.2.36",
    "jax>=0.4.35",
    "equinox>=0.11.9",
    "optax>=0.2.4",
    "einops>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nn_magnetics"]

[tool.uv.sources]
magpylib = { path = "../magpylib", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.13.0"
]
